[package]
name = "scte35-injector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
mpeg2ts = "0.3.1"
mpeg2ts-reader = "0.18.2"
scte35 = "0.2.0"
crc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
